fixed button animation and submittting

--- a/htmlForm/htmlForm.html
+++ b/htmlForm/htmlForm.html
@@ -22,7 +22,11 @@
             </div>
         </div>
         <div class = 'row'>
-            <button class = 'submitBtn' type="submit" onclick="getValues()" >Submit</button>
+            <div class="box-2">
+                <div class="btn btn-two">
+                    <button class = 'submitBtn' type="submit" onclick="getValues()" >Submit</button>
+                </div>
+            </div>
         </div>
     </form>
 
