changed showing errors to onchange

--- a/htmlForm/htmlForm.html
+++ b/htmlForm/htmlForm.html
@@ -15,12 +15,12 @@
                 <label class = 'label' for="phone">Phone:</label><br/><br>
             </div>
             <div class = 'inputs'>
-                <input class ='input' type="text" id="fname" name="fname" placeholder="Jan" required="required"><br/><br>
-                <input class ='input' type="text" id="lname" name="lname" required="required"><br><br>
-                <input class ='input' type="text" id="age" name="age" required="required"><br><br>
-                <input class ='input' type="text" id="email" name="email" required="required"><br><br>    
-                <input class ='input' type="password" id="password" name="password" required="required"><br><br>
-                <input class ='input' type="tel" id="phone" name="phone" required="required"><br><br>
+                <input class ='input' onchange= 'getValues()' type="text" id="fname" name="fname" placeholder="Jan" required="required"><br/><br>
+                <input class ='input' onchange= 'getValues()' type="text" id="lname" name="lname" required="required"><br><br>
+                <input class ='input' onchange= 'getValues()' type="text" id="age" name="age" required="required"><br><br>
+                <input class ='input' onchange= 'getValues()' type="text" id="email" name="email" required="required"><br><br>    
+                <input class ='input' onchange= 'getValues()' type="password" id="password" name="password" required="required"><br><br>
+                <input class ='input' onchange= 'getValues()' type="tel" id="phone" name="phone" required="required"><br><br>
             </div>
         </div>
         <div class = 'row'>
